# Junk-Filter

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_BEAUTIFICATION_EXAMPLES.vue  P1_FIXES_SUMMARY.md  README.md  browser-console-test.js  docker-compose.yml  problem.md  smoke_test.bat  smoke_test.sh  start-all-fixed.bat  start-all.bat  start-all.sh  start-desktop.bat  stop-all.sh  test-api.bat  test-api.ps1  test_llm_call.py  verify-day1.bat  verify-day1.sh  verify-sources.bat  verify-sources.sh
.claude/: settings.local.json
backend-go/: .dockerignore  Dockerfile  config.yaml  go.mod  go.sum  main.go  main_refactored.go
backend-mock/: package.json  server.js
backend-python/: .env.example  Dockerfile  api_server.py  config.py  main.py  repush_pending.py  requirements.txt  telegram_bot.py
description/: ADAPTER_LAYER_IMPLEMENTATION.md  AI_CONFIG_REFACTOR_SUMMARY.md  ARCHIVE.md  ARCHIVE_HISTORICAL_SUMMARIES.md  COMPLETE_FINAL_ANSWER.md  COMPLETION_CHECKLIST.md  CTO_ARCHITECTURE_AUDIT.md  CTO_AUDIT_QUICK_START.md  DUAL_ENGINE_EVALUATION_IMPLEMENTATION.md  FRONTEND_COMPLETION_CHECKLIST.md  INDEX.md  LLM_IMPLEMENTATION_CHECKLIST.md  LOCAL_MODEL_DISCUSSION.md  MASTER_INDEX.md  PHASE1_CLEANUP_AND_INTEGRATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE3_EXECUTION_PLAN.md  PHASE3_PLANNING.md  PHASE3_SSE_FIX_COMPLETE.md  PHASE3_STEP2_3_COMPLETED.md  PHASE4_DIRECTION_A_PLAN.md  (+18 more)
frontend-vue/src-tauri/: Cargo.toml  tauri.conf.json
frontend-vue/src-tauri/capabilities/: default.json
frontend-vue/src-tauri/icons/: icon.icns
frontend-vue/src-tauri/src/: lib.rs  main.rs
(+244 files in other folders)
