[package]
name = "junk-filter"
version = "1.0.0"
description = "Intelligent content aggregation and value assessment system"
authors = ["JunkFilter"]
edition = "2021"

[lib]
name = "junk_filter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
